--- a/videos/templates/projs.html
+++ b/videos/templates/projs.html
@@ -14,7 +14,7 @@
 				<figure>
 						<img class="proj_image" src="{{p.image}}"/>
 						<figcaption class="legende_vid_duree">
-								1:03:25
+                            {{p|duration_proj}}
 						</figcaption>
 				</figure>
 		</a>
