--- a/videos/templates/add_proj.html
+++ b/videos/templates/add_proj.html
@@ -6,15 +6,33 @@
 {% endif %}
 
 <h1>Ajout d'une proj</h1>
+
 <form action="{% url 'add_proj' %}" method="post">
+
     {% csrf_token %}
+
     <label for="titre">Titre :</label>
-    <input type="text" name="titre"/>
-    <br/>
+    <input id="titre" size="30" type="text" value="Proj de février" name="titre"/>
+    <br/><br/>
+
     <label for="folder">Dossier :<label>
-    <input type="text" name="folder" value="Evenements/Semaine_internationale/Houlgate_2017/MQ"/>
-    <br/>
+    <input id="folder" size="60" type="text" name="folder" value="Evenements/Semaine_internationale/Houlgate_2017"/>
+    <br/><br/>
+    
+    <label for="promo">Promo :<label>
+    <input id="promo" type="number" name="promo" value="2015" min="1991" max="2030" step="1"/>
+    <br/><br/>
+
+    <label for="category">Catégorie :<label>
+    <select name="category">
+    {% for c in categories %}
+        <option value="{{c.id}}">{{c.titre}}</option>
+    {% endfor %}
+    </select>
+    <br/><br/>
+
     <input type="submit" value="Ajouter la proj"/>
+
 </form>
 
 {% endblock %}
