--- a/videos/static/style.css
+++ b/videos/static/style.css
@@ -42,9 +42,17 @@ Style de la bar de navigation
 */
 #navigation_bar{
     z-index: 1;
+    display: table;
+    background-color: white;
+    width: 100%;
+    border-style: solid;
+    border-width: 1px;
+    border-color:#e8e8e8;
+    border-right-width:0px;
+    border-left-width:0px;
 }
 
-#navigation_bar ul {
+/*#navigation_bar ul {
     z-index: 1;
     list-style-type: none;
     float: left;
@@ -63,9 +71,9 @@ Style de la bar de navigation
     border-left-width:0px;
     height:48px;
 
-}
+}*/
 
-#navigation_bar li {
+/*#navigation_bar li {
     float: left;
     z-index: 1;
 }
@@ -84,7 +92,7 @@ Style de la bar de navigation
     background-color: #444444;
     color:white;
     text-decoration: none;
-}
+}*/
 
 
 /*
@@ -92,14 +100,37 @@ Style de la bar de navigation
 Style de la Lateral Bar
 -----------------------
 */
-.navigation_bar_titre{
-  float: left;
 
+
+.navigation_bar_titre{
+  display: table-cell;
+  width: 14%;
 }
 
-.navigation_bar_menu{
-  float: left;
-  z-index: 1;
+
+.barre_de_recherche{
+  display: table-cell;
+  width: 86%;
+  vertical-align: middle;
+}
+
+form .biginput {
+  width: 600px;
+  height: 25px;
+  margin-left: 6px;
+  padding: 0 10px 0 10px;
+  background-color: #fff;
+  border: 1px solid #c8c8c8;
+  border-radius: 3px;
+  color:#858585;
+  font-weight:normal;
+  font-size: 1em;
+  -webkit-transition: all 0.2s linear;
+  -moz-transition: all 0.2s linear;
+  transition: all 0.2s linear;
+}
+form .biginput:focus {
+  color: black;
 }
 
 /* Influence de la barre latérale sur le body
@@ -109,24 +140,14 @@ Style de la Lateral Bar
 
 /* Pour le titre jtx*/
 #navigation_bar h1 {
-    float: left;
-    position:fixed;
     padding-top: 4px;
     padding-bottom: 4px;
-    padding-right: 97px;
-    padding-left: 97px;
+    padding-left: 35px;
     margin: 0;
-
     height:40px;
     color:#FDC500;
     background-color:white;
     text-align:center;
-    border-style: solid;
-    border-width: 1px;
-    border-color:#e8e8e8;
-    border-right-width:0px;
-    border-left-width:0px;
-
 }
 
 input[type=checkbox]:checked ~ #lateral_bar {
@@ -134,6 +155,7 @@ input[type=checkbox]:checked ~ #lateral_bar {
 }
 
 .menu_button{
+    display: table-cell;
 background-color: white;
 position: fixed;
 margin-top: 5px;
