--- a/videos/static/style.css
+++ b/videos/static/style.css
@@ -18,8 +18,8 @@ text-decoration:none !important;
 #body {
     display: table;
     margin: 0 auto;
-    margin-top:37px;
-
+    margin-top: 39px;
+    z-index: 3;
 }
 
 /*
@@ -50,6 +50,7 @@ Style de la bar de navigation
     border-color:#e8e8e8;
     border-right-width:0px;
     border-left-width:0px;
+    position:fixed;
 }
 
 /*#navigation_bar ul {
@@ -142,11 +143,13 @@ form .biginput:focus {
 #navigation_bar h1 {
     padding-top: 4px;
     padding-bottom: 4px;
-    padding-left: 35px;
+    text-align: center;
+
     margin: 0;
+    margin-left: 50px;
     height:40px;
     color:#FDC500;
-    background-color:white;
+
     text-align:center;
 }
 
@@ -155,13 +158,14 @@ input[type=checkbox]:checked ~ #lateral_bar {
 }
 
 .menu_button{
+
     display: table-cell;
 background-color: white;
 position: fixed;
 margin-top: 5px;
 margin-left: 7px;
 visibility: visible;
-z-index: 1;
+z-index: 2;
 padding: 7px;
 padding-bottom: 3px;
 opacity: 0.6;
@@ -402,6 +406,16 @@ Concerne l'affichage des légendes des projs
 Tout ce qui suit jusqu'au prochain bloc concerne le design du lecteur de vidéos
 -------------------------------------------------------------------------------
 */
+.titre_proj_nouv{
+  text-align: center;
+  font-size: 25px;
+  background-color: white;
+  box-shadow: 0px 0px 10px -7px;
+  padding-top:10px;
+  padding-bottom: 10px;
+  margin-top: 5px;
+  margin-bottom: -10px;
+  }
 
 .titre_et_vues{
   background-color: #ffffff;
@@ -801,6 +815,8 @@ input[type=checkbox] {
 /*  -webkit-appearance: square-button;
   -moz-appearance: button;
   display: inline-block;*/
+  display: inline-block;
+  margin-top: 5px;
   background-color: white;
   color: #444444;
   padding: 5px;
@@ -885,7 +901,7 @@ padding-top: 5px;
 
 .container{
   background-color: white;
-  box-shadow: 0px 0px 2px -1px;
+  box-shadow: 0px 0px 10px -7px;
   padding-left: 10px;
   padding-right: 10px;
   padding-bottom: 10px;
