--- a/videos/templates/base.html
+++ b/videos/templates/base.html
@@ -26,7 +26,7 @@
     </a>
 
     <div class="barre_de_recherche">
-      <form><input type="text" class='biginput'></form>
+        <form method="get" action="{% url 'search' %}"><input type="text" name="q" class='biginput'></form>
     </div>
   </div>
 
