--- a/videos/templates/video.html
+++ b/videos/templates/video.html
@@ -190,7 +190,7 @@
                         </a>
                         -
                         {{v.views}}
-                         vues.
+                         vues
                   </div>
                 </div>
               {% endfor %}
