--- a/videos/templates/videos.html
+++ b/videos/templates/videos.html
@@ -13,7 +13,7 @@
 	<div class="bloc_video">
 		<a href="{% url 'video' v.id %}">
 		<figure>
-				<img class="img_vid" src="{{v.url}}.png"/>	
+				<img class="img_vid" src="{{v.url}}.png"/>
 				<figcaption class="legende_vid_duree">
 						{{v|duration}}
 				</figcaption>
@@ -32,7 +32,7 @@
 					</a>
 					-
 					{{v.views}}
-					 vues.
+					 vues
 		</div>
 	</div>
 
