Changements mineurs de texte fixe en dynamique (nb de vues et durées des projs) - légère interface de connexion.

--- a/videos/templates/index.html
+++ b/videos/templates/index.html
@@ -28,7 +28,7 @@
 			        <figure>
 			            <img class="proj_image" src="{{p.image}}"/>
 									<figcaption class="legende_vid_duree">
-											1:03:25
+											  {{p|duration_proj}}
 									</figcaption>
 			        </figure>
 			    </a>
@@ -44,7 +44,7 @@
 									JTX2015
 								</a>
 								-
-								56
+								  {{p.views}}
 								 vues.
 					</div>
 				</div>
