--- a/videos/static/style.css
+++ b/videos/static/style.css
@@ -949,6 +949,28 @@ padding-top: 5px;
     }
 }
 
+.container_login{
+  background-color: white;
+  box-shadow: 0px 0px 10px -7px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 10px;
+  margin-top:0px;
+  width: 200px;
+  height: 174px;
+}
+
+.login_button{
+  float: right;
+}
+
+.container_login h1{
+  padding-top: 5px;
+  font-size:18px;
+  font-weight:bolder;
+}
+
+
 .container{
   background-color: white;
   box-shadow: 0px 0px 10px -7px;
