--- a/videos/templates/proj.html
+++ b/videos/templates/proj.html
@@ -33,7 +33,7 @@
 	      </div>
 	    </div>
 
-	    <div class="titre_et_vues_auteurs">Auteurs</div>
+	    <div id="proj_auteurs" class="titre_et_vues_auteurs">Auteurs</div>
 	    <div class="titre_et_vues_info">Une information pertinente</div>
 
 	    <div class="nb_vues">
@@ -226,14 +226,21 @@ var video = document.getElementById('video');
 var source = document.createElement('source');
 var titre_en_cours = document.getElementById('titre_en_cours');
 var titre_video_suivante = document.getElementById('titre_video_suivante');
+var proj_auteurs = document.getElementById('proj_auteurs');
 var source = document.createElement('source');
 video.appendChild(source);
 var titre = document.getElementById('titre_video');
 var current = 0;
 
 var playlist = []
+var tags = [][][];
 {% for r in proj.relation_proj_set.all %}
-playlist[{{ forloop.counter }}] = ['{{ r.video.titre }}', '{{r.video.url}}']
+    playlist[{{ forloop.counter }}] = ['{{ r.video.titre }}', '{{r.video.url}}', '{{r.video|auteurs}}']
+    x = [];
+	{% for r2 in r.video.relation_tag_set.all %}
+        x[{{forloop.counter}}] = [{{r2.tag.id}}, '{{r2.tag.titre}}'];
+	{% endfor %}
+    tags[{{forloop.counter}}] = x;
 {% endfor %}
 
 function launch(id) {
@@ -241,6 +248,7 @@ function launch(id) {
 	video.pause();
 
     titre_en_cours.innerHTML = playlist[id][0];
+    proj_auteurs.innerHTML = playlist[id][2];
 
     if (id + 1 < playlist.length) {
         titre_video_suivante.innerHTML = playlist[id+1][0];
