--- a/videos/templates/base.html
+++ b/videos/templates/base.html
@@ -204,11 +204,17 @@
 
 	<div id="body">
 
-    {% if titre_tag %}
-        <span class="tag" style="font-size:30px">{{titre}}</span><br/><br/>
-    {% else %}
-        <h1>{{titre}}</h1>
-    {% endif %}
+      {% if titre_tag %}
+        <div class="container">
+          Tags affichés : <span class="tag">{{titre}}</span>
+        </div>
+      {% elif titre %}
+          <div class="container">
+          <h1>{{titre}}</h1>
+          </div>
+      {% endif %}
+
+
 
     {% block body %}
     {% endblock %}
