--- a/videos/templates/base.html
+++ b/videos/templates/base.html
@@ -144,6 +144,7 @@
 
           <h3>Projs épinglées</h3>
           {% for f in request.user.favorite_proj_set.all %}
+          {% if f.epingle %}
           <a class="lateral_bar_button_a" href="{% url 'proj' f.proj.id %}">
               <div class="lateral_bar_button">
                   {{ f.proj.titre }}
@@ -153,7 +154,7 @@
               </div>
           </a>
 
-
+          {% endif %}
           {% endfor %}
 
           <hr>
