--- a/videos/templates/base.html
+++ b/videos/templates/base.html
@@ -78,7 +78,7 @@
     </a>
 
     <div class="barre_de_recherche">
-        <form method="get" action="{% url 'search' %}"><input type="text" name="q" class='biginput'></form>
+        <form method="get" action="{% url 'search' %}"><input placeholder="Rechercher" type="text" name="q" class='biginput'></form>
     </div>
   </div>
 
