--- a/videos/static/style.css
+++ b/videos/static/style.css
@@ -511,6 +511,7 @@ Tout ce qui suit jusqu'au prochain bloc concerne le design du lecteur de vidéos
 }
 
 .titre_et_vues_vues_et_jaime{
+
   float: right;
   display: table;
   background-color: #DDDDDD;
@@ -518,80 +519,58 @@ Tout ce qui suit jusqu'au prochain bloc concerne le design du lecteur de vidéos
   padding-top: -20px;
 }
 
-.epingler{
-  background-color: white;
+.bouton_deja_epingler{
+  opacity: 0.7;
+  padding-top: 1px;
+  width: 21px;
   float: right;
+  padding-right: 5px;
 }
 
 .bouton_epingler{
-
-  opacity: 0.7;
+  opacity: 0.5;
   padding-top: 1px;
   width: 21px;
-
-  ms-transform: rotate(0deg); /* IE 9 */
-  -webkit-transform: rotate(0deg); /* Chrome, Safari, Opera */
-  transform: rotate(0deg);
-
-  -webkit-transition: all 0.2s cubic-bezier(0.770, 0.000, 0.175, 1.000);
-  -moz-transition: all 0.2s cubic-bezier(0.770, 0.000, 0.175, 1.000);
-  transition: all 0.2s cubic-bezier(0.770, 0.000, 0.175, 1.000);
-
+  float: right;
+  padding-right: 5px;
 }
 
-.bouton_epingler_tic{
-  opacity: 0.7;
-  padding-top: 1px;
-  width: 21px;
-  position: relative;
-  top:0px;
-  right: 25px;
-  opacity: 0;
-
-  ms-transform: rotate(140deg); /* IE 9 */
-  -webkit-transform: rotate(140deg); /* Chrome, Safari, Opera */
-  transform: rotate(140deg);
-
-  -webkit-transition: all 0.2s cubic-bezier(0.770, 0.000, 0.175, 1.000);
-  -moz-transition: all 0.2s cubic-bezier(0.770, 0.000, 0.175, 1.000);
-  transition: all 0.2s cubic-bezier(0.770, 0.000, 0.175, 1.000);
-}
-
-.epingler:hover .bouton_epingler{
-  opacity: 0;
-  ms-transform: rotate(-140deg); /* IE 9 */
-  -webkit-transform: rotate(-140deg); /* Chrome, Safari, Opera */
-  transform: rotate(-140deg);
-}
-
-.epingler:hover  .bouton_epingler_tic{
+.bouton_epingler:hover + .text_epingler{
+  padding-right: 3px;
   opacity: 1;
-  top:0px;
-  ms-transform: rotate(0deg); /* IE 9 */
-  -webkit-transform: rotate(0deg); /* Chrome, Safari, Opera */
-  transform: rotate(0deg);
 }
 
-.epingler:hover .text_epingler{
-  opacity: 1;
-  right: 20px;
+.bouton_epingler:hover{
+  opacity: 0.9;
+  cursor: pointer;
 }
+
+.bouton_deja_epingler:hover + .text_epingler{
+  padding-right: 3px;
+  opacity: 1;
+}
+
+.bouton_deja_epingler:hover{
+  opacity: 0.3;
+  cursor: pointer;
+}
+
 
 .text_epingler{
-  position:relative;
+
+  padding-top: 4px;
+  padding-left: 3px;
+  padding-right: 15px;
+  font-size: 12px;
   float: right;
+  vertical-align: middle;
   opacity: 0;
-  right: 35px;
 
   -webkit-transition: all 0.2s cubic-bezier(0.770, 0.000, 0.175, 1.000);
   -moz-transition: all 0.2s cubic-bezier(0.770, 0.000, 0.175, 1.000);
   transition: all 0.2s cubic-bezier(0.770, 0.000, 0.175, 1.000);
 }
 
-.epingler:hover{
-  background-color: #dddddd;
-  border-radius: 6px;
-}
 
 .nb_vues{
 
